--- a/index.html
+++ b/index.html
@@ -10,9 +10,9 @@
 <body>
 
   <h1>NBA Scoreboards</h1>
-  <h2 class="giannis">Team Giannis</h2>
 
   <table>
+    <caption>Team Giannis</caption>
     <tr>
       <th class="number-player"></th>
       <th>Player</th>
@@ -120,10 +120,9 @@
   </table>
 
 
-  <h2 class="lebron">Team LeBron</h2>
-
   <table>
-    <tr>
+    <caption>Team LeBron</caption>
+        <tr>
       <th class="number-player"></th>
       <th>Player</th>
       <th>Min</th>
